9467
This is more of the standard bug with lubbing type constructors than it is about the warning. The types are extremely confused before they get there.
{code}
scala> List(B1(), B2())
<console>:13: error: type mismatch;
 found   : B1
 required: Product with Serializable with A[_ >: Option with Iterable <: Equals]
              List(B1(), B2())
                     ^
<console>:13: error: type mismatch;
 found   : B2
 required: Product with Serializable with A[_ >: Option with Iterable <: Equals]
              List(B1(), B2())
                           ^
{code}
